# opengl

./: CMakeLists.txt
include/glad/: glad.c
include/glad/glad/: glad.h
src/: FrontendSDL.cpp  FrontendSDL.hpp  GL_Program.cpp  GL_Program.hpp  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
